# mxe

./: .codio  .gitattributes  .gitignore  .hgignore  .mozconfig  .settings  .travis.yml  LICENSE  LICENSE.md  Makefile  README.md  TryRunResults-OTB.cmake  build-matrix.html  build_mingw_cross_env.sh  build_static_win32_libs.sh  cairomm-1.14.6.tar.xz  fontconfig-2.5.0-crosscompile.patch  github.mk  index.html  mxe.github.mk  mxe.patch.mk  mxe.updates.mk  patch.mk  remove_qt_static_libs  speexdsp.mk  startup.sh  updates.mk  versions.json
.github/: ISSUE_TEMPLATE  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-docs.yml  build-pr.yml
assets/: build-matrix.css  common.css
doc/: README  README.html  gmsl.html  index.html  release-process.txt
docs/: CNAME  build-matrix.html  gmsl.html  index.html  packages.json  release-process.txt  versions.json
docs/assets/: build-matrix.css  common.css
ext/: __gmsl  gmsl  gmsl-tests
plugins/: README.md
plugins/apps/: clementine-1-fixes.patch  clementine-2-fixes.patch  clementine.mk  clementine_qt4-1-fixes.patch  clementine_qt4-1-tinysvcmdns.patch  clementine_qt4-2-libprojectm.patch  clementine_qt4-3-chromaprint.patch  clementine_qt4.mk  eiskaltdcpp.mk  filezilla.mk  kdenlive-distribute.sh  kdenlive.README  kdenlive.mk  keepassx-1-don-t-discard-config-set-by-qmake.patch  keepassx.mk  luajit.mk  msmtp.mk  qbittorrent-1-do-not-check-qmake-existance.patch  qbittorrent-1-fixes.patch  qbittorrent-3-remove-unused-members-of-peerlistwidget.patch  qbittorrent-4-fix-library-list.patch  qbittorrent.mk  ricochet-1-fixes.patch  ricochet.mk  tor-1-fixes.patch  tor.mk  wrk.mk  (+1 more)
plugins/examples/qt5-freeze/qttools-test/: CMakeLists.txt
src/: .vmime.mk.swp  ColPack.mk  TkTable.mk  a52dec-1-fixes.patch  a52dec.mk  abiword-1-fixes.patch  abiword.mk  abseil-cpp.mk  absl-test.cpp  absl.mk  adwaita-icon-theme.mk  aec-1-fixes.patch  aec.mk  agg-1-fixes.patch  agg.mk  alembic-test.cpp  alembic.mk  alure-1-fixes.patch  alure-2-fixes.patch  alure.mk  aom-test.cpp  aom.mk  apr-1.patch  apr-2-wtypes.patch  apr-3.patch  apr-4-mingw-iphlpapi.patch  apr-5-atomic-incompatible-pointer.patch  apr-util.mk  apr.mk  argon2-1-fixes.patch  argon2-1-src.patch  argon2-2-install-permissions.patch  argon2-2-install.patch  argon2-test.cmake  argon2.mk  argtable.mk  armadillo-1-fixes.patch  armadillo-1-nocmakeconfigfiles.patch  armadillo-1-staticlib.patch  armadillo-2-nocmakeconfigfiles.patch  (+2078 more)
src/qt-test-cmake/: CMakeLists.txt
src/qttools-test/: CMakeLists.txt  mxe-cmake-qtuitools.cpp
tools/: backup_from_s3.py  build-pkg.lua  buildtime_calc.lua  compat-init.sh  copydlldeps.md  copydlldeps.py  copydlldeps.sh  copydlldeps.txt  copydlldepsexample.sh  create-build-matrix  create-screenshot-for-doc  fake-editor  freebsd-excludes  generate-qt-angle-shaders.sh  install-deps  make-shared-from-static  mxe-activate  mxe-bash-completion  mxe-get  nonetwork.c  patch-tool-mingw  patch-tool-mxe  plugins-with-additional-packages.sh  s3-fetch-and-sync  skeleton.py  travis-push.sh  update-config-guess  update-gmsl  update-wrapper.sh  update.sh  update_backup.py  update_backup.sh
(+392 files in other folders)
